# resizer

./: OCRpdf.py  Song_lyrics.py  chunk_wav.py  image_resizer.py  image_resizer_gen.py  pyproject.toml  rocky8.py  soundcloud_image_downloader.py  trim_wav_cli.py  video_splitter.py  wav_divider.py  wav_extract_segments.py
test/: test_image_resizer.py
